--- a/test/manual/loaders-new.amp.html
+++ b/test/manual/loaders-new.amp.html
@@ -70,7 +70,7 @@
     <script>
       // Hack to delay everything!
       window.AMP_MODE = {test: true};
-      const delay = parseInt(window.location.search.replace('?', '')) || 3000;
+      const delay = parseInt(window.location.search.replace('?', '')) || 5000;
       document.addEventListener(
         'amp:attached',
         e => {
@@ -106,6 +106,16 @@
     ></script>
     <script
       async
+      custom-element="amp-ad"
+      src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"
+    ></script>
+    <script
+      async
+      custom-element="amp-instagram"
+      src="https://cdn.ampproject.org/v0/amp-instagram-0.1.js"
+    ></script>
+    <script
+      async
       custom-element="amp-video-iframe"
       src="https://cdn.ampproject.org/v0/amp-video-iframe-0.1.js"
     ></script>
@@ -126,12 +136,27 @@
     ></script>
     <script
       async
+      custom-element="amp-jwplayer"
+      src="https://cdn.ampproject.org/v0/amp-jwplayer-0.1.js"
+    ></script>
+    <script
+      async
+      custom-element="amp-ima-video"
+      src="https://cdn.ampproject.org/v0/amp-ima-video-0.1.js"
+    ></script>
+    <script
+      async
+      custom-element="amp-brightcove"
+      src="https://cdn.ampproject.org/v0/amp-brightcove-0.1.js"
+    ></script>
+    <script
+      async
       custom-element="amp-facebook"
       src="https://cdn.ampproject.org/v0/amp-facebook-0.1.js"
     ></script>
     <script
       async
-      custom-element="amp-comments"
+      custom-element="amp-facebook-comments"
       src="https://cdn.ampproject.org/v0/amp-facebook-comments-0.1.js"
     ></script>
     <script
@@ -143,6 +168,26 @@
       async
       custom-element="amp-pinterest"
       src="https://cdn.ampproject.org/v0/amp-pinterest-0.1.js"
+    ></script>
+    <script
+      async
+      custom-element="amp-list"
+      src="https://cdn.ampproject.org/v0/amp-list-0.1.js"
+    ></script>
+    <script
+      async
+      custom-template="amp-mustache"
+      src="https://cdn.ampproject.org/v0/amp-mustache-0.1.js"
+    ></script>
+    <script
+      async
+      custom-element="amp-anim"
+      src="https://cdn.ampproject.org/v0/amp-anim-0.1.js"
+    ></script>
+    <script
+      async
+      custom-element="amp-google-document-embed"
+      src="https://cdn.ampproject.org/v0/amp-google-document-embed-0.1.js"
     ></script>
     <style amp-custom>
       /* boring boiler place stuff */
@@ -180,7 +225,8 @@
         color: #444;
         text-align: left;
       }
-      amp-img img {
+      amp-img img,
+      amp-anim img {
         object-fit: cover;
       }
 
@@ -276,9 +322,9 @@
   </head>
   <body>
     <div class="info">
-      <div>- Default delay is ~4 seconds</div>
+      <div>- Default delay is 5 seconds</div>
       <div>
-        - You can change the delay by adding ?{number} (e.g. ?5000) to the Url
+        - You can change the delay by adding ?{number} (e.g. ?9000) to the Url
       </div>
     </div>
     <div class="toolbar">
@@ -288,10 +334,10 @@
     </div>
 
     <amp-selector class="tabs-with-flex" role="tablist">
-      <div id="tab1" role="tab" aria-controls="tabpanel1" option selected>
+      <div role="tab" option selected>
         amp-img
       </div>
-      <div id="tabpanel1" role="tabpanel" aria-labelledby="tab1">
+      <div role="tabpanel">
         <section id="sectionAmpImg">
           <h2>normal</h2>
           <amp-img
@@ -342,11 +388,47 @@
           ></amp-img>
         </section>
       </div>
+      <div role="tab" option>
+        amp-anim
+      </div>
+      <div role="tabpanel">
+        <section>
+          <h2>amp-anim</h2>
+          <amp-anim
+            src="https://lh3.googleusercontent.com/qNn8GDz8Jfd-s9lt3Nc4lJeLjVyEaqGJTk1vuCUWazCmAeOBVjSWDD0SMTU7x0zhVe5UzOTKR0n-kN4SXx7yElvpKYvCMaRyS_g-jydhJ_cEVYmYPiZ_j1Y9de43mlKxU6s06uK1NAlpbSkL_046amEKOdgIACICkuWfOBwlw2hUDfjPOWskeyMrcTu8XOEerCLuVqXugG31QC345hz3lUyOlkdT9fMYVUynSERGNzHba7bXMOxKRe3izS5DIWUgJs3oeKYqA-V8iqgCvneD1jj0Ff68V_ajm4BDchQubBJU0ytXVkoWh27ngeEHubpnApOS6fcGsjPxeuMjnzAUtoTsiXz2FZi1mMrxrblJ-kZoAq1DJ95cnoqoa2CYq3BTgq2E8BRe2paNxLJ5GXBCTpNdXMpVJc6eD7ceijQyn-2qanilX-iK3ChbOq0uBHMvsdoC_LsFOu5KzbbNH71vM3DPkvDGmHJmF67Vj8sQ6uBrLnzpYlCyN4-Y9frR8zugDcqX5Q=w400-h300-no"
+            width="400"
+            height="300"
+          >
+          </amp-anim>
 
-      <div id="tab2" role="tab" aria-controls="tabpanel2" option>
+          <h2>amp-anim with image placeholder</h2>
+          <amp-anim
+            src="https://lh3.googleusercontent.com/qNn8GDz8Jfd-s9lt3Nc4lJeLjVyEaqGJTk1vuCUWazCmAeOBVjSWDD0SMTU7x0zhVe5UzOTKR0n-kN4SXx7yElvpKYvCMaRyS_g-jydhJ_cEVYmYPiZ_j1Y9de43mlKxU6s06uK1NAlpbSkL_046amEKOdgIACICkuWfOBwlw2hUDfjPOWskeyMrcTu8XOEerCLuVqXugG31QC345hz3lUyOlkdT9fMYVUynSERGNzHba7bXMOxKRe3izS5DIWUgJs3oeKYqA-V8iqgCvneD1jj0Ff68V_ajm4BDchQubBJU0ytXVkoWh27ngeEHubpnApOS6fcGsjPxeuMjnzAUtoTsiXz2FZi1mMrxrblJ-kZoAq1DJ95cnoqoa2CYq3BTgq2E8BRe2paNxLJ5GXBCTpNdXMpVJc6eD7ceijQyn-2qanilX-iK3ChbOq0uBHMvsdoC_LsFOu5KzbbNH71vM3DPkvDGmHJmF67Vj8sQ6uBrLnzpYlCyN4-Y9frR8zugDcqX5Q=w400-h300-no"
+            width="400"
+            height="300"
+          >
+            <amp-img
+              placeholder
+              src="https://lh3.googleusercontent.com/qNn8GDz8Jfd-s9lt3Nc4lJeLjVyEaqGJTk1vuCUWazCmAeOBVjSWDD0SMTU7x0zhVe5UzOTKR0n-kN4SXx7yElvpKYvCMaRyS_g-jydhJ_cEVYmYPiZ_j1Y9de43mlKxU6s06uK1NAlpbSkL_046amEKOdgIACICkuWfOBwlw2hUDfjPOWskeyMrcTu8XOEerCLuVqXugG31QC345hz3lUyOlkdT9fMYVUynSERGNzHba7bXMOxKRe3izS5DIWUgJs3oeKYqA-V8iqgCvneD1jj0Ff68V_ajm4BDchQubBJU0ytXVkoWh27ngeEHubpnApOS6fcGsjPxeuMjnzAUtoTsiXz2FZi1mMrxrblJ-kZoAq1DJ95cnoqoa2CYq3BTgq2E8BRe2paNxLJ5GXBCTpNdXMpVJc6eD7ceijQyn-2qanilX-iK3ChbOq0uBHMvsdoC_LsFOu5KzbbNH71vM3DPkvDGmHJmF67Vj8sQ6uBrLnzpYlCyN4-Y9frR8zugDcqX5Q=w400-h300-no-k"
+              width="400"
+              height="300"
+            >
+            </amp-img>
+          </amp-anim>
+
+          <h2>small amp-anim</h2>
+          <amp-anim
+            src="https://lh3.googleusercontent.com/qNn8GDz8Jfd-s9lt3Nc4lJeLjVyEaqGJTk1vuCUWazCmAeOBVjSWDD0SMTU7x0zhVe5UzOTKR0n-kN4SXx7yElvpKYvCMaRyS_g-jydhJ_cEVYmYPiZ_j1Y9de43mlKxU6s06uK1NAlpbSkL_046amEKOdgIACICkuWfOBwlw2hUDfjPOWskeyMrcTu8XOEerCLuVqXugG31QC345hz3lUyOlkdT9fMYVUynSERGNzHba7bXMOxKRe3izS5DIWUgJs3oeKYqA-V8iqgCvneD1jj0Ff68V_ajm4BDchQubBJU0ytXVkoWh27ngeEHubpnApOS6fcGsjPxeuMjnzAUtoTsiXz2FZi1mMrxrblJ-kZoAq1DJ95cnoqoa2CYq3BTgq2E8BRe2paNxLJ5GXBCTpNdXMpVJc6eD7ceijQyn-2qanilX-iK3ChbOq0uBHMvsdoC_LsFOu5KzbbNH71vM3DPkvDGmHJmF67Vj8sQ6uBrLnzpYlCyN4-Y9frR8zugDcqX5Q=w400-h300-no"
+            width="320"
+            height="100"
+          >
+          </amp-anim>
+        </section>
+      </div>
+      <div role="tab" option>
         amp-iframe
       </div>
-      <div id="tabpanel2" role="tabpanel" aria-labelledby="tab2">
+      <div role="tabpanel">
         <section id="sectionAmpIframe">
           <h2>amp-iframe with image placeholder</h2>
           <amp-iframe
@@ -395,10 +477,10 @@
           ></amp-iframe>
         </section>
       </div>
-      <div id="tab3" role="tab" aria-controls="tabpanel3" option>
+      <div role="tab" option>
         amp-twitter
       </div>
-      <div id="tabpanel3" role="tabpanel" aria-labelledby="tab3">
+      <div role="tabpanel">
         <section>
           <h2>normal amp-twitter</h2>
           <amp-twitter
@@ -438,10 +520,10 @@
           </amp-twitter>
         </section>
       </div>
-      <div id="tab4" role="tab" aria-controls="tabpanel4" option>
+      <div role="tab" option>
         amp-youtube
       </div>
-      <div id="tabpanel4" role="tabpanel" aria-labelledby="tab4">
+      <div role="tabpanel">
         <section>
           <h2>amp-youtube</h2>
           <amp-youtube
@@ -470,10 +552,52 @@
           </amp-youtube>
         </section>
       </div>
-      <div id="tab5" role="tab" aria-controls="tabpanel5" option>
-        amp-facebook
+      <div role="tab" option>
+        amp-*-video-player
       </div>
-      <div id="tabpanel5" role="tabpanel" aria-labelledby="tab5">
+      <div role="tabpanel">
+        <section>
+          <h2>amp-ima-video</h2>
+          <amp-ima-video
+            id="Video1"
+            width="640"
+            height="360"
+            layout="responsive"
+            data-tag="https://pubads.g.doubleclick.net/gampad/ads?sz=640x480&iu=/124319096/external/ad_rule_samples&ciu_szs=300x250&ad_rule=1&impl=s&gdfp_req=1&env=vp&output=vmap&unviewed_position_start=1&cust_params=deployment%3Ddevsite%26sample_ar%3Dpreonlybumper&cmsid=496&vid=short_onecue&correlator="
+            data-ad-label="Publicidad (%s de %s)"
+            data-poster="/examples/img/ima-poster.png"
+          >
+            <source
+              src="https://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"
+              type="video/mp4"
+            />
+          </amp-ima-video>
+
+          <h2>amp-jwplayer</h2>
+          <amp-jwplayer
+            data-media-id="BZ6tc0gy"
+            data-player-id="uoIbMPm3"
+            layout="responsive"
+            width="16"
+            height="9"
+          >
+          </amp-jwplayer>
+
+          <h2>amp-brightcove</h2>
+          <amp-brightcove
+            width="480"
+            height="270"
+            data-account="1290862519001"
+            data-player-id="SyIOV8yWM"
+            data-video-id="ref:amp-docs-sample"
+          >
+          </amp-brightcove>
+        </section>
+      </div>
+      <div role="tab" option>
+        amp-facebook-*
+      </div>
+      <div role="tabpanel">
         <section>
           <h2>amp-facebook</h2>
           <amp-facebook
@@ -499,12 +623,34 @@
               layout="responsive"
             ></amp-img>
           </amp-facebook>
+
+          <h2>amp-facebook-page</h2>
+          <amp-facebook-page
+            width="552"
+            height="310"
+            layout="responsive"
+            data-tabs="timeline"
+            data-href="https://www.facebook.com/barackobama/"
+          >
+          </amp-facebook-page>
+
+          <h2>amp-facebook-comments</h2>
+          <amp-facebook-comments
+            width="552"
+            height="310"
+            layout="responsive"
+            data-numposts="5"
+            data-order-by="time"
+            data-href="https://developers.facebook.com/docs/plugins/comments"
+          >
+          </amp-facebook-comments>
         </section>
       </div>
-      <div id="tab6" role="tab" aria-controls="tabpanel6" option>
+
+      <div role="tab" option>
         amp-pinterest
       </div>
-      <div id="tabpanel6" role="tabpanel" aria-labelledby="tab6">
+      <div role="tabpanel">
         <section>
           <h2>amp-pinterest</h2>
           <amp-pinterest
@@ -542,6 +688,166 @@
             data-url="https://www.pinterest.com/pin/99360735500167749/"
           >
           </amp-pinterest>
+        </section>
+      </div>
+      <div role="tab" option>
+        amp-list
+      </div>
+      <div role="tabpanel">
+        <section>
+          <button on="tap:list1.refresh,list2.refresh,list3.refresh">
+            Refresh all lists!
+          </button>
+          <h2>amp-list</h2>
+          <amp-list
+            id="list1"
+            width="auto"
+            height="400"
+            layout="fixed-height"
+            src="/examples/list.example.json"
+            class="m1"
+            reset-on-refresh
+          >
+            <template type="amp-mustache" id="amp-template-id">
+              <div>
+                <a href="{{ url }}">{{ title }}</a>
+              </div>
+            </template>
+          </amp-list>
+
+          <h2>amp-list with image placeholder</h2>
+          <amp-list
+            id="list2"
+            width="auto"
+            height="400"
+            layout="fixed-height"
+            src="/examples/list.example.json"
+            class="m1"
+            reset-on-refresh
+          >
+            <template type="amp-mustache" id="amp-template-id">
+              <div>
+                <a href="{{ url }}">{{ title }}</a>
+              </div>
+            </template>
+            <amp-img
+              placeholder
+              src="https://picsum.photos/400/400?image=319"
+              width="auto"
+              height="400"
+              layout="fixed-height"
+            ></amp-img>
+          </amp-list>
+
+          <h2>small amp-list</h2>
+          <amp-list
+            id="list3"
+            width="auto"
+            height="100"
+            layout="fixed-height"
+            src="/examples/list.example.json"
+            class="m1"
+            reset-on-refresh
+          >
+            <template type="amp-mustache" id="amp-template-id">
+              <div>
+                <a href="{{ url }}">{{ title }}</a>
+              </div>
+            </template>
+          </amp-list>
+        </section>
+      </div>
+
+      <div role="tab" option>
+        amp-google-document-embed
+      </div>
+      <div role="tabpanel">
+        <section>
+          <h2>amp-google-document-embed</h2>
+          <amp-google-document-embed
+            src="https://www.gpo.gov/fdsys/pkg/GPO-CONAN-1992/pdf/GPO-CONAN-1992-6.pdf"
+            width="1"
+            height="1"
+            layout="responsive"
+          ></amp-google-document-embed>
+        </section>
+      </div>
+
+      <div role="tab" option>
+        amp-instagram (partially implemented)
+      </div>
+      <div role="tabpanel">
+        <section>
+          <h1>
+            PARTIAL IMPLEMENTED - branded loader to be implemented
+          </h1>
+          <h2>amp-instagram</h2>
+          <amp-instagram
+            data-shortcode="fBwFP"
+            width="320"
+            height="320"
+            layout="responsive"
+          >
+          </amp-instagram>
+
+          <h2>small amp-instagram</h2>
+          <amp-instagram
+            data-shortcode="fBwFP"
+            width="320"
+            height="100"
+            layout="fixed"
+          >
+          </amp-instagram>
+        </section>
+      </div>
+
+      <div role="tab" option>
+        amp-ad (not implemented yet)
+      </div>
+      <div role="tabpanel">
+        <h1>
+          NOT IMPLEMENTED - should get the old loaders regardless of experiment
+        </h1>
+        <section>
+          <h2>normal amp-ad</h2>
+          <amp-ad
+            width="300"
+            height="250"
+            type="a9"
+            data-aax_size="300x250"
+            data-aax_pubname="test123"
+            data-aax_src="302"
+          >
+          </amp-ad>
+
+          <h2>small amp-ad</h2>
+          <amp-ad
+            width="320"
+            height="50"
+            type="rubicon"
+            data-method="smartTag"
+            data-account="14062"
+            data-site="70608"
+            data-zone="335918"
+            data-size="43"
+            data-kw="amp-test, test"
+            json='{"visitor":{"age":"18-24","gender":"male"},"inventory":{"section":"amp"}}'
+          >
+          </amp-ad>
+
+          <h2>amp-embed</h2>
+          <amp-embed
+            width="100"
+            height="283"
+            type="taboola"
+            layout="responsive"
+            heights="(min-width:1907px) 39%, (min-width:1200px) 46%, (min-width:780px) 64%, (min-width:480px) 98%, (min-width:460px) 167%, 196%"
+            data-publisher="amp-demo"
+            data-mode="thumbnails-a"
+            data-placement="Ads Example"
+            data-article="auto"
+          >
+          </amp-embed>
         </section>
       </div>
     </amp-selector>
