--- a/examples/article-access-multiple.amp.html
+++ b/examples/article-access-multiple.amp.html
@@ -9,9 +9,9 @@
   <script id="amp-access" type="application/json">
     [
       {
-        "authorization": "https://amp.dev/documentation/examples/components/amp-access/authorization?rid=READER_ID&url=CANONICAL_URL&ref=DOCUMENT_REFERRER&_=RANDOM",
-        "pingback": "https://amp.dev/documentation/examples/components/amp-access/authorization?rid=READER_ID&url=CANONICAL_URL&ref=DOCUMENT_REFERRER&_=RANDOM",
-        "login": "https://amp.dev/documentation/examples/components/amp-access/login?rid=READER_ID&url=CANONICAL_URL",
+        "authorization": "https://ampbyexample.com/components/amp-access/authorization?rid=READER_ID&url=CANONICAL_URL&ref=DOCUMENT_REFERRER&_=RANDOM",
+        "pingback": "https://ampbyexample.com/components/amp-access/authorization?rid=READER_ID&url=CANONICAL_URL&ref=DOCUMENT_REFERRER&_=RANDOM",
+        "login": "https://ampbyexample.com/components/amp-access/login?rid=READER_ID&url=CANONICAL_URL",
         "authorizationFallbackResponse": {"error": true},
         "namespace": "default"
       },
